# jitx-pnp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
designs/jitx_pnp.main.jitx_pnp/design-info/: physical-layout.design  reference-designators.table  schematic.design  stable.design
jitx_pnp/: __init__.py  __main__.py  main.py  pnp.py
tests/: conftest.py  test_cli.py  test_golden.py  test_helpers.py  test_parse.py  test_pick_and_place.py  test_writers.py
tests/fixtures/: README.md  golden.csv  golden.xml  synthetic.xml
