[build-system]
requires = ["hatchling>=1.27.0,<2.0"]
build-backend = "hatchling.build"

[project]
name = "jitx-pnp"
version = "0.1.0"
description = "Generate pick-and-place files from JITX XML board exports"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
  { name = "JITX", email = "b.gupta@jitx.com" },
]
keywords = ["jitx", "pick-and-place", "pnp", "pcb", "electronics", "manufacturing"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
  "build>=1.2",
  "twine>=5",
]

[project.scripts]
jitx-pnp = "jitx_pnp.__main__:main"

[project.urls]
Homepage = "https://github.com/JITx-Inc/jitx-pnp"
Repository = "https://github.com/JITx-Inc/jitx-pnp"
Issues = "https://github.com/JITx-Inc/jitx-pnp/issues"

[tool.hatch.build.targets.sdist]
exclude = [
  ".vscode/",
  ".github/",
  "3d-models/",
  "designs/",
  "parts-db/",
  ".ruff_cache/",
  ".pytest_cache/",
  ".gitignore",
  "build/",
  "dist/",
  "pnp_output.csv",
]

[tool.hatch.build.targets.wheel]
packages = ["jitx_pnp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["designs", "3d-models", "parts-db"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
